2000-09-11  JP Rosevear  <jpr@helixcode.com>

	* conduits/todo/todo-conduit.c (comp_from_remote_record): Use
	description list instead of comment list for pilot todo note
	(transmit): Check for null cal component properties, set priority
	correctly, use description list instead of comment list.  Make
	pilot record private when appropriate.

2000-09-10  JP Rosevear  <jpr@helixcode.com>

	* conduits/todo/todo-conduit.c (comp_from_remote_record): Only
	set the due date only if it exists

2000-09-10  JP Rosevear  <jpr@helixcode.com>

	* gui/calendar-model.c (get_is_complete): Relying on the status
	field is somewhat faulty since it is related to group scheduling

2000-09-10  JP Rosevear  <jpr@helixcode.com>

	* conduits/todo/todo-conduit.c (update_calendar_entry_in_repository): 
	Make log output a little more sensible
	(comp_from_remote_record): Minor correction when making a CalComponent
	from scratch.
	(update_record): Use comp_from_remote_record for new items, rather
	than repeating the code here.

2000-09-10  JP Rosevear  <jpr@helixcode.com>

	* conduits/todo/todo-conduit.c: Remove catch_ret_val function
	since its no longer useful.  Fix naming of various fields from
	the header changes.  Use GnomePilotRecord* stuff instead of 
	ICAL_PILOT_SYNC_*
	(e_todo_context_new): Rename from gcalconduit_new_context. Now takes
	a pilot id and loads the configuration here
	(e_todo_context_destroy): Rename from gcalconduit_destroy_context.
	Unref the client and destroy the configuration if they exist here
	(start_calendar_server): Change the default calendar name
	(local_record_from_comp_uid): Rename from local_record_from_ical_uid
	(local_record_from_compobject): Rename from 
	local_record_from_icalobject.  Properly do the pilot id and status.
	(comp_from_remote_record): Rename from ical_from_remote_record.
	Handle due, complete, classification and pilot stuff properly
	(pre_sync): Remove some old stuff.  We need to figure out how to
	set some of the field values.